--- a/client/munchie-master-ui/src/components/carouselStyles.css
+++ b/client/munchie-master-ui/src/components/carouselStyles.css
@@ -18,7 +18,7 @@
     height: 40px;
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.5);
-    color: white;
+    color: rgb(193, 28, 70);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +42,7 @@
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background-color: #d9d9d9;
+    background-color: #697455;
     border: none;
   }
   
