--- a/client/munchie-master-ui/src/components/carouselStyles.css
+++ b/client/munchie-master-ui/src/components/carouselStyles.css
@@ -17,7 +17,7 @@
     width: 40px; /* Larger arrows for visibility */
     height: 40px;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
     color: rgb(193, 28, 70);
     display: flex;
     justify-content: center;
